--- a/peteForm.css
+++ b/peteForm.css
@@ -1,6 +1,6 @@
-/* html, body {
-    background-color: #CCCCCC;
-} */
+html, body {
+    background-color: rgb(247, 247, 247);
+}
 
 .title {
     text-align: center;
